--- a/src/Component/BannerComponent/BannerComponent.css
+++ b/src/Component/BannerComponent/BannerComponent.css
@@ -5,14 +5,27 @@
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)), url(https://images5.alphacoders.com/540/thumb-1920-540654.jpg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .BannerSection video {
   position: absolute;
-  min-width: 100%;
+  min-width: 70%;
   min-height: 100%;
   top: 0;
   left: 0;
+}
+
+.BannerContent img {
+  width: 500px;
+  height: auto;
+}
+
+.cropImg {
+  clip-path: polygon(0 0, 100% 0, 100% 38%, 0 100%, 72% 48%, 89% 13%, 0 49%, 73% 10%, 0 34%);
 }
 
 .SideBar {
