--- a/src/Component/CardComponent/CardLargeComponent/CardComponent.css
+++ b/src/Component/CardComponent/CardLargeComponent/CardComponent.css
@@ -4,6 +4,20 @@
   padding: 30px 0;
   background-position: center;
   background-size: cover;
+  background-color: #000;
+}
+
+.Container {
+  max-width: 1800px;
+  margin: auto;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
+}
+
+.CardComponent h1 {
+  color: var(--mainColor);
+  font-size: 1.4rem;
+  text-align: center;
 }
