--- a/src/Component/CardComponent/CardSmComponent/CardSmComponent.css
+++ b/src/Component/CardComponent/CardSmComponent/CardSmComponent.css
@@ -1,17 +1,12 @@
-.Container {
-  max-width: 1600px;
-  margin: auto;
-}
-
 .card {
   width: 350px;
   height: auto;
-  margin: 1rem 1rem;
   border-radius: 10px;
   overflow: hidden;
   background-color: rgb(63, 60, 60);
   border-radius: 20px;
   padding: 1rem;
+  margin: 1rem;
 }
 
 .Inner-Card {
@@ -34,7 +29,7 @@
   transform: scale(1.1);
 }
 
-.card .CardContent h1 {
+.card .CardContent h2 {
   font-size: 1.2rem;
   color: var(--mainColor);
   font-weight: 500;
