--- a/src/Component/BannerComponent/BannerComponent.css
+++ b/src/Component/BannerComponent/BannerComponent.css
@@ -5,7 +5,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
-  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)), url(https://images5.alphacoders.com/540/thumb-1920-540654.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)), url(https://images2.alphacoders.com/709/709939.png);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,6 +43,7 @@
   transform: translateX(-100px);
   border-radius: 5px;
 }
+
 .SideBarCard {
   width: 400px;
   height: 220px;
@@ -54,4 +55,14 @@
 
 .SideBarCard:hover {
   transform: translateX(-10px);
+}
+
+@media (max-width: 1400px) {
+  .SideBar {
+    display: none;
+  }
+  .BannerContent img {
+    width: 200px;
+    height: auto;
+  }
 }
