--- a/src/Component/NavBar/Navbar.css
+++ b/src/Component/NavBar/Navbar.css
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .WhoMadeThis {
@@ -67,6 +68,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 .SubNavBar p {
   margin: 2rem;
